--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ h11==0.14.0
 idna==3.4
 outcome==1.2.0
 PySocks==1.7.1
-selenium==4.8.2
+selenium==4.26.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.0
 trio-websocket==0.9.2
+typing_extensions==4.12.2
 urllib3==1.26.14
+websocket-client==1.8.0
 wsproto==1.2.0
